--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -7,7 +7,7 @@ header {
 }
 
 header .logo {
-	background-image: url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/logo.png');
+	background-image: url('https://github.com/JacobM311/holbertonschool-AirBnB_clone/blob/main/web_static/images/hbnb_logo.png?raw=true');
 	background-repeat: no-repeat;
 	height: 60px;
 	margin-left: 20px;
